k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-service
  labels:
    app: edge-service
    version: edge-service
    service: edge-service
spec:
  type: LoadBalancer
  selector:
    app: edge-service
    version: edge-service
  ports:
    - protocol: TCP
      port: 80
      name: tcp
      targetPort: 9000
