k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
spec:
  rules:
    #    - host: ingressgateway
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polar-keycloak
                port:
                  number: 80
